--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.3",
+    "multer": "^1.4.1",
     "npm": "^6.9.0",
+    "sharp": "^0.22.1",
     "validator": "^10.11.0"
   },
   "devDependencies": {
